5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1752_1523.log
== TEST (2019-05-16 16:07:05) 
-- CODE:
qi-int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0

while(soma>=200):
	soma=qi+qc
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi-int(input())
NameError: name 'qi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:07:18) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0

while(soma>=200):
	soma=qi+qc
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma>=200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:07:36) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0

while(soma==200):
	soma=qi+qc
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:07:59) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(soma==200):
	soma=qi+qc
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:08:10) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(soma==200):
	soma=soma+qi+qc
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:20) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(soma>=200):
	soma=soma+(qi+qc)
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:44) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi>=200):
	qi=soma+(qi+qc)
	qd=soma-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:09) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qd>=200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:16) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qd>=200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(soma==200):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:22) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qd<200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:38) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:10:47) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- EXECUTION TIME:
0.121757
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:28) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<=200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:11:30) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<=200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- EXECUTION TIME:
0.211073
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:34) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<200):
	qi=qi+qc
	qd=qi-qd
	s+=1
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:53) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<200):
	qi=qi+qc
	qi=qi-qd
	s+=1
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:12:00) 
-- CODE:
qi=int(input("quanridade inicial de baloes: "))
qc=int(input("quantidade de baloes construidos a cada semana: "))
qd=int(input("quantidade de baloes destruidos a cada semana: "))

s=0
soma=0
while(qi<200):
	qi=qi+qc
	qi=qi-qd
	s+=1
print(s)
-- EXECUTION TIME:
0.160669
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
